--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,13 @@
 <resources>
-    <string name="app_name">LatihanSebelumPraktikumMobpro</string>
-    <string name="bmi_intro">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
-    <string name="berat_badan">Berat badan</string>
-    <string name="tinggi_badan">Tinggi badan</string>
-    <string name="pria">Pria</string>
-    <string name="wanita">Wanita</string>
-    <string name="hitung">Hitung</string>
-    <string name="bmi_x">BMI: %1$.2f</string>
-    <string name="kurus">Kurus</string>
-    <string name="ideal">Ideal</string>
-    <string name="gemuk">Gemuk</string>
-    <string name="input_invalid">Tidak boleh kosong.</string>
+    <string name="app_name">Mobpro 1</string>
+    <string name="bangundatar_intro">Mari menghitung luas dan keliling persegi panjang! Masukan data berikut: </string>
+    <string name="length">Panjang</string>
+    <string name="width">Lebar</string>
+    <string name="calculate">Hitung</string>
+    <string name="area">Luas</string>
+    <string name="perimeter">Keliling</string>
+    <string name="input_error">Error: Input tidak boleh kosong</string>
+    <string name="area_x">Luas: %.2f</string>
+    <string name="perimeter_x">Keliling: %.2f</string>
+
 </resources>
