--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="area">Luas</string>
     <string name="perimeter">Keliling</string>
     <string name="input_error">Error: Input tidak boleh kosong</string>
-    <string name="area_x">Luas: %.2f</string>
-    <string name="perimeter_x">Keliling: %.2f</string>
+<!--    <string name="area_x">Luas: %.2f</string>-->
+<!--    <string name="perimeter_x">Keliling: %.2f</string>-->
 </resources>
